--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "firebase": "^9.9.3",
+    "i": "^0.3.7",
+    "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-icons-kit": "^2.0.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
