--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,6 +18,8 @@
     "i": "^0.3.7",
     "npm": "^8.19.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-custom-alert": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-icons-kit": "^2.0.0",
